Fix hero image size on mobile

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -51,6 +51,11 @@
     max-width: 40%;
     height: 100%;
     @media only screen and (max-width: 986px) {
+      width: 60%;
+      height: auto;
+      max-width: unset;
+    }
+    @media only screen and (max-width: 586px) {
       width: 90%;
       height: auto;
       max-width: unset;
